master

2.36.3
- Mayhem
  Fix next/previous page keybinds.

2.36.2
- noface
  Add tags support on /f/.
- Mayhem
  Add /mu/ archived image redirection.

2.36.1
- noface
  The Menu now has search links for Archivers.
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

2.36.0
- Mayhem
  Added thread creation QR cooldown.
  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
  Fix /q/ QR cooldowns for image and sage posts.

2.35.4
- Mayhem
  Removed the obnoxious 4chan Pass ad in captcha errors when posting.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.

2.35.3
- Mayhem
  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).

2.35.2
- Mayhem
  Fix 4chan Pass with QR on Firefox.

2.35.1
- Mayhem
  Add support for 4chan Pass.
  You can now use 'Enter' in keybind combinations.

2.35.0
- Mayhem
  Use 4chan's API to fetch posts for:
    - Thread Updater.
    - Quote Inlining.
    - Quote Previewing.
    - Thread Expansion.
    - Comment Expansion.
    This will make fetching faster, and reduce bandwidth usage.
  Add an option to disable 4chan's inline extension. Enabled by default.
  Fix compatibility with Scriptish's auto-udpater.

2.34.10
- Mayhem
  Fix 4chan X. Blame moot.

2.34.9
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.

2.34.8
- Mayhem
  One-word-captcha: you don't need to input an extra space anymore, the true word will be duplicated.

2.34.7
- Mayhem
  Fix one-word-captcha, you'll need to leave a space for the fake word now.

2.34.6
- Mayhem
  Fix error caused by change in 4chan's HTML about hidden filename in case of spoiler.

2.34.5
- Mayhem
  Fix cooldown on /q/.
  Fix thread creation with no file on /q/.