@@ -1,4 +1,6 @@
 master
+- noface
+  Add Catalog Links toggle.
 
 2.36.3
 - Mayhem
